# Stellar

./: .gitignore  AGENTS.md  CLAUDE.md  INTEGRATION_GUIDE.md  PUBLISH.md  README.md  build.gradle  en-US.md  jitpack.yml  publish.gradle  settings.gradle
.claude/: settings.local.json
.github/workflows/: demo-ci.yml  demo-release.yml  libraries-ci.yml  libraries-release.yml  manager-ci.yml  manager-release.yml  publish.yml  sync-release-gitee.yml
Docs/readme/: zh-CN.md
api/: api.versions.toml  build.gradle  manifest.gradle  settings.gradle
api/aidl/: build.gradle
api/api/: build.gradle
api/provider/: build.gradle
api/provider/src/main/: AndroidManifest.xml
api/shared/: build.gradle
api/userservice/: build.gradle  userservice-standalone.gradle
demo/: build.gradle  demo.versions.toml
demo/release/baselineProfiles/0/: demo-release.dm
demo/release/baselineProfiles/1/: demo-release.dm
demo/src/main/: AndroidManifest.xml
demo/src/main/res/drawable/: ic_launcher_foreground.xml
demo/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
manager/: build.gradle  manager.versions.toml  proguard-rules.pro
manager/src/main/: AndroidManifest.xml
manager/src/main/jni/: CMakeLists.txt  adb_pairing.cpp  adb_pairing.h  cgroup.h  chid.cpp  logging.h  misc.cpp  misc.h  rish.cpp  selinux.cpp  selinux.h  starter.cpp
manager/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash.xml  stellar.xml  stellar_icon.xml
manager/src/main/res/values-ar/: strings.xml
manager/src/main/res/values-es/: strings.xml
manager/src/main/res/values-fr/: strings.xml
manager/src/main/res/values-ru/: strings.xml
manager/src/main/res/values-zh-rCN/: strings.xml  (+1 more)
server/: build.gradle
shizuku/aidl/: build.gradle
shizuku/api/: build.gradle
shizuku/server/: build.gradle
(+256 files in other folders)
